--- a/assets/styles/form.css
+++ b/assets/styles/form.css
@@ -32,20 +32,52 @@ height: 180px;
 /* Special format for login (smaller)*/
 #login input {
 color: #333;
+float: left;
+text-align: left;
 background: #fff;
-border: 1px solid #ccc;
-padding:3px;
-font-size:12px;
+border: 1px solid #ccc; 
+padding:8px;
+font-size:16px;
+width: 300px;
+margin-left:25px;
 }
 #login label {
 float: left;
-text-align: right;
-margin-right: 0.5em;
-padding-top: 1em;
-font-size: 9px;
-color: #3FA9F5;
+text-align: left;
+width: 360px;
+padding-top: 6px;
+margin-bottom: 4px;
+font-size: 12px;
+color: #fff;
 text-transform:uppercase;
+margin-left:25px;
 }
+#login{
+	width:360px;
+	height:200px;
+	float:left;
+	padding:0px;
+	margin:0px;
+}
+#openid{
+	width:360px;
+	float:left;
+	margin-left:25px;
+}
+#loginsubmit input {
+	color: #333;
+	float: left;
+	text-align: left;
+	background: #fff;
+	margin-top: 8px;
+	border: 1px solid #ccc; 
+	padding:8px;
+	font-size:14px;
+	width: 60px;
+	margin-left:25px;
+}
+
+
 #comment_form{
 	background:black;
 	height:100px;
