--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -302,24 +302,6 @@ height: 200px;
 }
 
 
-/* Special format for login (smaller)*/
-#login input {
-color: #333;
-background: #fff;
-border: 1px solid #ccc;
-padding:3px;
-font-size:12px;
-}
-#login label {
-float: left;
-text-align: right;
-margin-right: 0.5em;
-padding-top: 1em;
-font-size: 9px;
-color: #3FA9F5;
-text-transform:uppercase;
-}
-
 div.wrapper {	
 	margin:0 auto;
 	padding:2em;	
@@ -446,9 +428,17 @@ p {
 }
 
 .grande {
-	font-size: 3em;
+	font-size:24px;
+	color:#333;
+	font-family: 'PT Sans Narrow', arial, serif;
 	margin-bottom: 0.2em;	
 }
+.piccolo {
+	font-size:16px;
+	color:#333;
+	font-family: 'PT Sans Narrow', arial, serif;	
+}
+
 
 amount {
 	color: #666;
@@ -613,10 +603,10 @@ nrwhite {
 /* Styles for the user dashboard */
 .dashboardcolumn {
 	float:left;
-	width:230px;
+	width:215px;
 	margin-top:5px;
 	margin-right:10px;
-	padding:8px;
+	padding:16px;
 	background:#333;
 	color:#fff;
 	min-height: 200px;
@@ -624,6 +614,7 @@ nrwhite {
 }
 .dashboardcolumn h1{
 	color:#fff;
+	
 }
 .dashboardunit {
 	float:left;
