--- a/assets/styles/form.css
+++ b/assets/styles/form.css
@@ -28,6 +28,31 @@ font-size:20px;
 width: 400px;
 height: 180px;
 }
+/* For  registering */ 
+#div_register_at_footprint.org input {
+color: #333;
+float: left;
+text-align: left;
+background: #fff;
+border: 1px solid #ccc; 
+padding:8px;
+font-size:16px;
+width: 300px;
+margin-left:25px;
+margin-bottom:20px;
+}
+#div_register_at_footprint.org label {
+float: left;
+text-align: left;
+width: 600px;
+height: 40px;
+padding-top: 6px;
+margin-bottom: 14px;
+font-size: 12px;
+color: #fff;
+text-transform:uppercase;
+margin-left:25px;
+}
 
 /* Special format for login (smaller)*/
 #login input {
