--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -619,6 +619,7 @@ amount {
 
 .square {
 	float:left;
+	position:relative;
 	margin: 5px;
 	padding: 10px;
 }
@@ -653,6 +654,38 @@ h1.bignr {
 	background-repeat:none;
 }
 
+/* Style for search squares*/
+.squaretext {
+	position:absolute;
+	top: 40px;
+	width:130px;
+	height:80px;
+	text-align:center;
+	font-size:14px;
+}
+.squareplace {
+	position:absolute;
+	top: 3px;
+	left: 0px;
+	width:60px;
+	text-align:left;
+	font-size:10px;
+}
+.squareyear{
+	position:absolute;
+	top: 3px;
+	right: 0px;
+	width:60px;
+	text-align:right;
+	font-size:10px;
+}
+.squareimpacts{
+	position:absolute;
+	bottom: 5px;
+	width:130px;
+	text-align:center;
+	font-size:10px;
+}
 /* Impact graphs for homepage */
 
 .plus {
