--- a/application/data/forms/register.xml
+++ b/application/data/forms/register.xml
@@ -20,12 +20,12 @@
     </email>
     <openid rules="trim|xss_clean">
       <type>text</type>
-	  <label>Open ID</label>
+	<label>Open ID</label>
     </openid>
     <foaf rules="trim|xss_clean">
 	  <label>Friend of a friend URI</label>
-	<type>text</type>
-	  <note>A friend of a friend file is a semantic document that has your biographical information and relationships. Include the URI of yours here.</note>
+	<note>A friend of a friend file is a semantic document that has your biographical information and relationships. Include the URI of yours here.</note>
+      <type>text</type>
     </foaf>
 	<recaptcha>
 	  <label>Recaptcha</label>
@@ -35,5 +35,6 @@
     <type>submit</type>
     <value>Submit</value>
   </submit>
+</fieldset>
 </form>
 
