--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -142,7 +142,9 @@ h1.about {
 	float:left;
 	text-align: left;
 	width:920px;
-	padding: 30px;
+	padding: 25px;
+	padding-bottom: 0px;
+	padding-right: 25px;
 	background-color: #666;
 	margin-top:10px;
 }
@@ -150,7 +152,7 @@ h1.about {
 	float:left;
 	text-align: left;
 	width:920px;
-	padding: 30px;
+	padding: 25px;
 	background-color: #666;
 	margin-bottom:30px;
 	padding-top:0px;
@@ -161,7 +163,8 @@ h1.about {
 	width:400px;
 	padding: 20px;
 	background-color: #F5FAFF;
-	margin-right:20px;
+	margin-left:10px;
+	margin-right:10px;
 	margin-bottom:20px;
 	background: url(http://cesc.kth.se/wp-content/themes/themorningafter/images/bg/stripe.png) repeat;
 }
@@ -181,21 +184,24 @@ h1.about {
 }
 #lca_title {
 	float:left;
-	left:5px;
+	margin-left:10px;
 	height: 70px;
 	width: 550px;
 }
 
 #lca_background .nr {
 	float: left;
-	height: 100px;
-	width: 130px;
+	height: 90px;
+	padding-top:10px;
+	width: 120px;
+	padding-left:5px;
 	text-align:center;
 }
 #lca_background .meta {
 	float:left;
-	height: 100px;
-	width: 150px;
+	height: 90px;
+	padding-top:10px;
+	width: 160px;
 	padding-left:15px;
 }
 #lca_background .circle {
@@ -227,7 +233,7 @@ h1.about {
 	background-repeat:none;
 }
 #lca_background  h1.nr {
-	font-size: 40px;
+	font-size: 30px;
 	font-family: 'Lato', arial, serif; 
 	color: #333;
 	width: 100%;
