--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -107,12 +107,28 @@ h1#title {
 }
 #about-people{
 	float:left;
-	width: 305px;
+	width: 750px;
 	padding-right:15px;
 	padding-left:15px;
-	padding-bottom:15px;
+	padding-bottom:10px;
 	margin-right:15px;
+	margin-bottom: 20px;
 	background: url(http://cesc.kth.se/wp-content/themes/themorningafter/images/bg/stripe.png) repeat;
+}
+#about-people-pic{
+	float:left;
+	width: 300px;
+	padding-right:15px;
+	padding-left:15px;
+	margin-right:15px;
+}
+#about-people-text{
+	float:right;
+	width: 300px;
+	padding-right:15px;
+	padding-left:15px;
+	margin-right:15px;
+	margin-top: 30px;
 }
 #about h1{
 	font-size:34px;
